Fix spacing issues on medium size collapsible

--- a/src/styles/_b-collapsible.scss
+++ b/src/styles/_b-collapsible.scss
@@ -29,6 +29,9 @@
 
   &--medium {
     border-width: 1px;
+    .b-collapsible__content {
+      padding-left: 0 !important;
+    }
   }
   &--small {
     border-width: 1px;
